--- a/public/422.html
+++ b/public/422.html
@@ -19,8 +19,9 @@
 <body>
   <!-- This file lives in public/422.html -->
   <div class="dialog">
-    <h1>The change you wanted was rejected.</h1>
-    <p>Maybe you tried to change something you didn't have access to.</p>
+    <h1>Die Änderung wurde abgelehnt.</h1>
+    <p>Eventuell haben Sie eine Funktion aufgerufen, auf die Sie keine Zugriffsrechte haben.</p>
+      <p>Corruptissima re publica plurimae leges.</p>
   </div>
 </body>
 </html>
