--- a/public/500.html
+++ b/public/500.html
@@ -19,7 +19,8 @@
 <body>
   <!-- This file lives in public/500.html -->
   <div class="dialog">
-    <h1>We're sorry, but something went wrong.</h1>
+    <h1>Iuvenes ist auf einen Fehler gestossen, wir bitten um Entschuldigung!</h1>
+      <p>Utinam mihi ignoscas</p>
   </div>
 </body>
 </html>
