--- a/public/404.html
+++ b/public/404.html
@@ -19,8 +19,10 @@
 <body>
   <!-- This file lives in public/404.html -->
   <div class="dialog">
-    <h1>The page you were looking for doesn't exist.</h1>
-    <p>You may have mistyped the address or the page may have moved.</p>
+    <h1>Die Seite konnte nicht gefunden werden.</h1>
+    <p>Falls Sie die Adresse manuell eingegeben haben, prüfen Sie diese auf Schreibfehler. Ansonsten versuchen Sie es später erneut
+    und kontaktieren Sie gegebenenfalls den Administrator.</p>
+      <p>Medio flumine quaerere aquam.</p>
   </div>
 </body>
 </html>
